--- a/client/app/styles/app.scss
+++ b/client/app/styles/app.scss
@@ -1,3 +1,5 @@
-@import "lib/bootstrap";
+@import "brand";
 @import "index";
-@import "test";
+@import "normalize";
+@import "header";
+@import "utilities";
