--- a/client/app/styles/_header.scss
+++ b/client/app/styles/_header.scss
@@ -6,10 +6,11 @@
     ul {
         margin: 0 auto;
         list-style: none;
+        margin-left: 40px;
         li {
             text-align: center;
             float:left;
-            width: 300px;
+            width: 25%;
             a{
                 color: $white;
                 display: block;
