add style for header

--- a/client/app/styles/_header.scss
+++ b/client/app/styles/_header.scss
@@ -3,6 +3,9 @@
     background-color: $dark-blue;
     font-size: $font-size-large;
     line-height: $header-height;
+    border-bottom: 1px solid rgba(0, 0, 0, 0.2);
+    box-shadow: 0 1px 0 rgba(255, 255, 255, 0.07);
+    z-index: 100;
     ul {
         margin: 0 auto;
         list-style: none;
@@ -11,14 +14,14 @@
             text-align: center;
             float:left;
             width: 25%;
-            a{
+            .header-link{
                 color: $white;
                 display: block;
             }
-            a:link, a:visited {
+            .header-link:link, .header-link:visited {
                 text-decoration: none;
             }
-            a:hover, a:focus, a:active {
+            .header-link:hover, .header-link:focus, .header-link:active {
                 text-decoration: none;
                 background-color: $darker-blue;
             }
