--- a/client/app/templates/hello.html
+++ b/client/app/templates/hello.html
@@ -1,1 +1,9 @@
-<p>This is <span >home</span> page</p>
+<div class="home-container">
+    <div class="photo-input">
+    </div>
+    <div class="photo-analyse">
+        <div class="result-name">You look like AAA very much.</div>
+        <div class="result-photo">photo</div>
+        <div class="result-introduction">she is .....</div>
+    </div>
+</div>
