--- a/client/app/styles/_brand.scss
+++ b/client/app/styles/_brand.scss
@@ -11,3 +11,8 @@ $blue:              #2290DA;
 $dark-blue:         #003f87;
 $light-dark-blue:   #7A9EC8;
 $darker-blue:       #012F63;
+$darker-green:      #2B4F3F;
+$dark-green:        #4F867D;
+$green:             #7DAF34;
+$light-green:       #CCE198;
+$lighter-green:     #CAE6BD;
