--- a/client/app/styles/_header.scss
+++ b/client/app/styles/_header.scss
@@ -1,6 +1,6 @@
 .nav-bar{
     height: $header-height;
-    background-color: $dark-blue;
+    background-color: $dark-green;
     font-size: $font-size-large;
     line-height: $header-height;
     border-bottom: 1px solid rgba(0, 0, 0, 0.2);
@@ -23,11 +23,11 @@
             }
             .header-link:link, .header-link:visited {
                 text-decoration: none;
-                background-color: $dark-blue;
+                background-color: $dark-green;
             }
             .header-link:hover, .header-link:focus, .header-link:active {
                 text-decoration: none;
-                background-color: $darker-blue;
+                background-color: $darker-green;
             }
         }
     }
