--- a/client/app/templates/hello.html
+++ b/client/app/templates/hello.html
@@ -1,5 +1,11 @@
 <div class="home-container">
     <div class="photo-input">
+        <div class="image-div">
+            <div class="image-list"></div>
+            <div class="image-box"></div>
+            <div class="image-button"></div>
+        </div>
+        <div class="upload-button"></div>
     </div>
     <div class="photo-analyse">
         <div class="result-name">You look like AAA very much.</div>
