--- a/client/app/styles/_home.scss
+++ b/client/app/styles/_home.scss
@@ -11,9 +11,38 @@
         margin: 0 auto;
         .image-div {
             position: relative;
-            max-width: 800px;
             margin:0 auto;
             text-align: center;
+            max-width: 1440px;
+            .image-item {
+                height: 240px;
+                width: 180px;
+                float: left;
+            }
+            #image-item-1 {
+                background: url(/img/jiangwenli.jpeg) no-repeat center;
+                background-size: 370px;
+            }
+            #image-item-2 {
+                background: url(/img/sunli.jpg) no-repeat center;
+                background-size: 200px;
+            }
+            #image-item-3 {
+                background: url(/img/liangchaowei.jpg) no-repeat center;
+                background-size: 200px;
+            }
+            #image-item-4 {
+                background: url(/img/anglebaby.jpg) no-repeat center;
+                background-size: 200px;
+            }
+            #image-item-5 {
+                background: url(/img/lingengxin.jpg) no-repeat center;
+                background-size: 200px;
+            }
+            #image-item-6 {
+                background: url(/img/qinhailu.gif) no-repeat center;
+                background-size: 200px;
+            }
             .image-box{
                 height: 240px;
                 width: 180px;
