--- a/client/app/templates/hello.html
+++ b/client/app/templates/hello.html
@@ -1,7 +1,14 @@
 <div class="home-container">
     <div class="photo-input">
         <div class="image-div">
-            <div class="image-list"></div>
+            <div class="image-list clearfix">
+                <div class="image-item" id="image-item-1"></div>
+                <div class="image-item" id="image-item-2"></div>
+                <div class="image-item" id="image-item-3"></div>
+                <div class="image-item" id="image-item-4"></div>
+                <div class="image-item" id="image-item-5"></div>
+                <div class="image-item" id="image-item-6"></div>
+            </div>
             <div class="image-box"></div>
             <div class="image-button"></div>
         </div>
