add animation for the ui-view

--- a/client/app/templates/tech.html
+++ b/client/app/templates/tech.html
@@ -1,2 +1,9 @@
-
-    div.doc-header+div.doc-container>div.doc-nav+div.doc-content
+<div class="tech-container">
+    <div class="doc-header">
+        A Study Journey
+    </div>
+    <div class="doc-container">
+        <div class="doc-nav"></div>
+        <div class="doc-content"></div>
+    </div>
+</div>
