--- a/client/app/styles/_home.scss
+++ b/client/app/styles/_home.scss
@@ -1,10 +1,9 @@
 .home-container {
     min-height: 720px;
-    background: -webkit-linear-gradient($dark-green 10%, $green 60%); /* For Safari 5.1 to 6.0 */
-    background: -o-linear-gradient($dark-green 10%, $green 60%); /* For Opera 11.1 to 12.0 */
-    background: -moz-linear-gradient($dark-green 10%, $green 60%); /* For Firefox 3.6 to 15 */
-    background: linear-gradient($dark-green 10%, $green 60%); /* Standard syntax */
-    padding-top: 30px;
+    //background: -webkit-linear-gradient($dark-green 10%, $green 60%); /* For Safari 5.1 to 6.0 */
+    //background: -o-linear-gradient($dark-green 10%, $green 60%); /* For Opera 11.1 to 12.0 */
+    //background: -moz-linear-gradient($dark-green 10%, $green 60%); /* For Firefox 3.6 to 15 */
+    //background: linear-gradient($dark-green 10%, $green 60%); /* Standard syntax */
     .photo-input {
         height: 300px;
         width: 100%;
