--- a/client/app/styles/_index.scss
+++ b/client/app/styles/_index.scss
@@ -1,19 +1,13 @@
+body {
+    background-color: $lighter-green;
+}
 .view-container {
   margin-top: $header-height;
   position: relative;
+  padding: 30px;
 }
 .view-frame {
-      min-height: 20px;
-  padding: 19px;
-  margin-bottom: 20px;
-  background-color: #f5f5f5;
-  border: 1px solid #e3e3e3;
-  -webkit-border-radius: 4px;
-  -moz-border-radius: 4px;
-  border-radius: 4px;
-  -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,0.05);
-  -moz-box-shadow: inset 0 1px 1px rgba(0,0,0,0.05);
-  box-shadow: inset 0 1px 1px rgba(0,0,0,0.05);
+    min-height: 720px;
 }
 .view-frame.ng-enter, .view-frame.ng-leave {
   position: absolute;
