--- a/client/app/styles/_tech.scss
+++ b/client/app/styles/_tech.scss
@@ -1,5 +1,7 @@
 .tech-container{
     width: 100%;
     height: 500px;
-    background-color: $dark-green;
+    background-color: $white;
+    border-radius: 10px;
+    @include opacity(0.8);
 }
