--- a/client/app/templates/hello.html
+++ b/client/app/templates/hello.html
@@ -2,12 +2,15 @@
     <div class="photo-input">
         <div class="image-div">
             <div class="image-list clearfix">
-                <div class="image-item" id="image-item-1"></div>
-                <div class="image-item" id="image-item-2"></div>
-                <div class="image-item" id="image-item-3"></div>
-                <div class="image-item" id="image-item-4"></div>
-                <div class="image-item" id="image-item-5"></div>
-                <div class="image-item" id="image-item-6"></div>
+                <div class="image-prev-btn"><</div>
+                <div class="image-next-btn">></div>
+                <ul>
+                    <li><a href=""></a><img src=""></li>
+                    <li><a href=""></a><img src=""></li>
+                    <li><a href=""></a><img src=""></li>
+                    <li><a href=""></a><img src=""></li>
+                    <li><a href=""></a><img src=""></li>
+                </ul>
             </div>
             <div class="image-box"></div>
             <div class="image-button"></div>
