--- a/client/app/styles/_mixin.scss
+++ b/client/app/styles/_mixin.scss
@@ -1,5 +1,5 @@
 @mixin opacity($opacity) {
-    opacity($opacity);
+    opacity: $opacity;
     filter:alpha(opacity=$opacity*100);       /* IE */
     -moz-opacity:$opacity;              /* Mozilla */
 }
