--- a/client/app/templates/hello.html
+++ b/client/app/templates/hello.html
@@ -1,15 +1,15 @@
 <div class="home-container">
     <div class="photo-input">
         <div class="image-div">
-            <div class="image-list clearfix">
-                <div class="image-prev-btn"><</div>
-                <div class="image-next-btn">></div>
+            <div class="image-list">
+                <div class="image-btn image-prev-btn"><</div>
+                <div class="image-btn image-next-btn">></div>
                 <ul>
-                    <li><a href=""></a><img src=""></li>
-                    <li><a href=""></a><img src=""></li>
-                    <li><a href=""></a><img src=""></li>
-                    <li><a href=""></a><img src=""></li>
-                    <li><a href=""></a><img src=""></li>
+                    <li><a href="#"><img src="/img/1.jpg"></a></li>
+                    <li><a href="#"><img src="/img/2.jpg"></a></li>
+                    <li><a href="#"><img src="/img/3.jpg"></a></li>
+                    <li><a href="#"><img src="/img/4.jpg"></a></li>
+                    <li><a href="#"><img src="/img/5.jpg"></a></li>
                 </ul>
             </div>
             <div class="image-box"></div>
