--- a/client/app/styles/_brand.scss
+++ b/client/app/styles/_brand.scss
@@ -1,10 +1,12 @@
 $header-height:     50px;
 
 $font-size-base:          14px !default;
+$font-size-larger:         ceil(($font-size-base * 1.50)) !default; // ~21px
 $font-size-large:         ceil(($font-size-base * 1.25)) !default; // ~18px
 $font-size-small:         ceil(($font-size-base * 0.85)) !default; // ~12px
 
 $gray:              #525252;
+$light-gray:        #828282;
 $black:             #000;
 $white:             #FFF;
 $blue:              #2290DA;
