--- a/client/app/templates/tech.html
+++ b/client/app/templates/tech.html
@@ -3,7 +3,11 @@
         A Study Journey
     </div>
     <div class="doc-container">
-        <div class="doc-nav"></div>
+        <div class="doc-nav">
+            <ul>
+                <li></li>
+            </ul>
+        </div>
         <div class="doc-content"></div>
     </div>
 </div>
