--- a/client/app/templates/widget/carousel.html
+++ b/client/app/templates/widget/carousel.html
@@ -1,4 +1,4 @@
-<div class="image-list" carousel>
+<div class="carousel-widget" carousel>
     <div class="image-btn image-prev-btn"><</div>
     <div class="image-btn image-next-btn">></div>
     <div class="carousel-inner" ng-transclude></div>
