add first slide

--- a/client/app/styles/widget/_carousel.scss
+++ b/client/app/styles/widget/_carousel.scss
@@ -31,6 +31,8 @@
             position: absolute;
             left: 0;
             top: 0;
+            height: 360px;
+            width: 270px;
         }
     }
 }
