--- a/client/app/templates/widget/carousel.html
+++ b/client/app/templates/widget/carousel.html
@@ -1,5 +1,5 @@
 <div class="carousel-widget" carousel>
-    <div class="image-btn image-prev-btn"><</div>
-    <div class="image-btn image-next-btn">></div>
+    <div class="image-btn image-left-btn" ng-click="left()"><</div>
+    <div class="image-btn image-right-btn" ng-click="right()">></div>
     <div class="carousel-inner" ng-transclude></div>
 </div>
