--- a/client/app/styles/widget/_carousel.scss
+++ b/client/app/styles/widget/_carousel.scss
@@ -29,6 +29,10 @@
         height: 100%;
         .item {
             position: absolute;
+            -webkit-transition:all .5s ease-in-out;
+            -moz-transition:all .5s ease-in-out;
+            -o-transition:all .5s ease-in-out;
+            transition:all .5s ease-in-out;
             img {
                 width: 100%;
                 height: 100%;
