--- a/client/app/templates/widget/carousel.html
+++ b/client/app/templates/widget/carousel.html
@@ -1,4 +1,4 @@
-<div class="carousel-widget" carousel>
+<div class="carousel-widget" carousel ng-mouseleave="autoPlay()" ng-mouseover="stopPlay()">
     <div class="image-btn image-left-btn" ng-click="left()"><</div>
     <div class="image-btn image-right-btn" ng-click="right()">></div>
     <div class="carousel-inner" ng-transclude></div>
