change style for the home paeg

--- a/client/app/templates/home.html
+++ b/client/app/templates/home.html
@@ -7,7 +7,9 @@
                 </slide>
             </carousel>
             <div class="image-box"></div>
-            <div class="image-button"></div>
+            <div class="image-button">
+                <span>Use this photo</span>
+            </div>
         </div>
         <div class="upload-button"></div>
     </div>
