--- a/client/app/styles/_home.scss
+++ b/client/app/styles/_home.scss
@@ -17,10 +17,32 @@
                 z-index: 100;
                 top: -10px;
                 left: 539px;
-                height: 360px;
+                height: 310px;
                 width: 270px;
                 position: absolute;
                 border: 10px solid $white;
+                border-bottom: 60px solid $white;
+            }
+            .image-button {
+                width: 270px;
+                height: 40px;
+                border: 1px solid $green;
+                position: absolute;
+                bottom: 0;
+                left: 549px;
+                z-index: 100;
+                border-radius: 3px;
+                span {
+                    line-height: 40px;
+                    color: $black;
+                }
+                &:hover {
+                    border: 1px solid $dark-green;
+                }
+                &:active {
+                    -webkit-box-shadow: inset 0 3px 5px rgba(0,0,0,.125);
+                    box-shadow: inset 0 3px 5px rgba(0,0,0,.125);
+                }
             }
         }
     }
