--- a/client/app/styles/_home.scss
+++ b/client/app/styles/_home.scss
@@ -5,18 +5,19 @@
     //background: -moz-linear-gradient($dark-green 10%, $green 60%); /* For Firefox 3.6 to 15 */
     //background: linear-gradient($dark-green 10%, $green 60%); /* Standard syntax */
     .photo-input {
-        height: 300px;
         width: 100%;
         margin: 0 auto;
         .image-div {
             position: relative;
             margin:0 auto;
+            margin-bottom: 10px;
             text-align: center;
             max-width: 1440px;
             .image-box{
                 z-index: 100;
                 top: -10px;
-                left: 539px;
+                left: 50%;
+                margin-left: -145px;
                 height: 310px;
                 width: 270px;
                 position: absolute;
@@ -29,7 +30,8 @@
                 border: 1px solid $green;
                 position: absolute;
                 bottom: 0;
-                left: 549px;
+                left: 50%;
+                margin-left: -135px;
                 z-index: 100;
                 border-radius: 3px;
                 span {
@@ -44,6 +46,19 @@
                     box-shadow: inset 0 3px 5px rgba(0,0,0,.125);
                 }
             }
+        }
+        .upload-button {
+            img {
+                height: 30px;
+                vertical-align: middle;
+            }
+            margin: 30px auto;
+            width: 270px;
+            height: 40px;
+            border: 1px solid $white;
+            text-align: center;
+            line-height: 40px;
+            background-color: $light-green;
         }
     }
 }
