--- a/client/app/styles/_mixin.scss
+++ b/client/app/styles/_mixin.scss
@@ -3,3 +3,10 @@
     filter:alpha(opacity=$opacity*100);       /* IE */
     -moz-opacity:$opacity;              /* Mozilla */
 }
+@mixin blur($blur) {
+    -webkit-filter: blur($blur + px); /* Chrome, Opera */
+    -moz-filter: blur($blur + px);
+    -ms-filter: blur($blur + px);    
+    filter: blur($blur + px);
+    filter: progid:DXImageTransform.Microsoft.Blur(PixelRadius=$blur, MakeShadow=false); /* IE6~IE9 */
+}
