--- a/client/app/templates/home.html
+++ b/client/app/templates/home.html
@@ -11,16 +11,17 @@
                 <span>Use this photo</span>
             </div>
         </div>
-        <div class="upload-button" ng-click="uploadPhoto()">
+        <label class="upload-button">
             <img src="/img/browse-icon.svg">
             <span>Upload your photos</span>
-        </div>
+            <input type="file" name="uploadImage" id="uploadImage" accept="image/*" ng-model="imageFile" onchange="angular.element(this).scope().uploadImage(this)">
+        </label>
     </div>
-    <div class="photo-analyse" ng-show="res">
-        <div class="result-name">You look like {{response.name}} very much.</div>
+    <div class="photo-analyse clearfix" ng-show="res">
         <div class="result-photo">
             <img src="{{response.photoURL}}">
         </div>
+        <div class="result-name">You look like {{response.name}} very much.</div>
         <div class="result-introduction">{{response.intro}}</div>
     </div>
 </div>
